--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ["1.19", "1.20", "1.21.x", "1.22.x"]
+        go-version: ["1.22","1.23"]
     defaults:
       run:
         working-directory: ./acexy
