--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,7 +3,7 @@ on:
     release:
         types: [published]
 env:
-    REGISTRY: ghrc.io
+    REGISTRY: ghcr.io
     IMAGE_NAME: ${{ github.repository }}
 
 jobs:
