--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   acexy:
     container_name: acexy
-    image: ghcr.io/krinkuto11/acexy-orchestrator:dev
+    image: ghcr.io/krinkuto11/acexy-orchestrator:latest
     restart: unless-stopped
     ports:
       - "8080:8080"
